UPPCharacterAttributeSet 추가, AddMovementInput 시 이동속도 영향 받도록함

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GlobalDefaultGameMode="/Script/ProjectP.ProjectPGameMode"
+GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
@@ -76,4 +76,9 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/ProjectP.PPCharacterAttributeSet.AttackRate",NewName="/Script/ProjectP.PPCharacterAttributeSet.BaseDamage")
++PropertyRedirects=(OldName="/Script/ProjectP.PPCharacterAttributeSet.MaxAttackRate",NewName="/Script/ProjectP.PPCharacterAttributeSet.MaxBaseDamage")
 
