--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,3 +9,5 @@ FixedCameraDistance=1500.0
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+[/Script/GamePlayAbilities.AbilitySystemGlobals]
+bUseDebugTargetFromHud=True
